<resources>
    <string name="app_name">SyncPlus</string>
    <string name="all_contacts">Alle Kontakte</string>
    <string name="button_title_back">Zurück</string>
    <string name="button_title_freemail_booking">Jetzt kostenlos einrichten</string>
    <string name="button_title_accept">Übernehmen</string>
    <string name="button_title_cancel">Abbrechen</string>
    <string name="button_title_retry">Wiederholen</string>
    <string name="button_title_next">Weiter</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="notification_channel_debugging">Fehlersuche</string>
    <string name="notification_channel_general">Andere wichtige Mitteilungen</string>
    <string name="notification_channel_sync">Synchronisierung</string>
    <string name="notification_channel_sync_errors">Synchronisierungsfehler</string>
    <string name="notification_channel_sync_errors_desc">Fehler, die zum Abbruch der Synchronisation führen, wie beispielsweise unerwartete Serverantworten</string>
    <string name="notification_channel_sync_warnings">Synchronisierungswarnungen</string>
    <string name="notification_channel_sync_warnings_desc">Nicht fatale Synchronisierungsprobleme wie bestimmte ungültige Dateien</string>
    <string name="notification_channel_sync_io_errors">Netzwerk- und E/A-Fehler</string>
    <string name="notification_channel_sync_io_errors_desc">Zeitüberschreitungen, Verbindungsprobleme, usw. (oft vorübergehend)</string>
    <string name="dialog_demo_title">Berechtigung für Kontaktimport notwendig</string>
    <string name="dialog_demo_message">Um Kontakte von Ihrem Gerät in Ihr Adressbuch in der Cloud zu übertragen, wird der Zugriff auf die Kontakte benötigt.</string>
    <string name="logging_couldnt_create_file">Protokolldatei konnte nicht angelegt werden</string>
    <string name="logging_notification_title">Sync-Plus-Protokollierung</string>
    <string name="logging_notification_text">Alle Sync-Plus-Aktivitäten werden protokolliert</string>
    <string name="logging_notification_send_log">Protokoll senden</string>
    <string name="authority_debug_provider" translatable="false">de.telekom.sync.plus.debug</string>
    <string name="button_next">Weiter</string>
    <string name="button_setup">Jetzt einrichten</string>
    <string name="intro_cloud_text">Ihre Kontakte, Kalender und E-Mails <b>– immer aktuell auf allen Geräten und sicher gespeichert in der Telekom Cloud.</b></string>
    <string name="intro_calendar_title">Keine Geburtstage mehr vergessen – <b>behalten Sie alle Termine im Blick.</b></string>
    <string name="intro_calendar_text">Die Sync-Plus App synchronisiert den Telekom Kalender mit Ihrem Smartphone. Sie finden dann alle Ihre Termine gesammelt in der Kalender-App.</string>
    <string name="intro_contacts_title"><b>Immer griffbereit</b> – Ihre Telefonnummern und Adressen.</string>
    <string name="intro_contacts_text">Die Sync-Plus App synchronisiert das Telekom Adressbuch mit den Kontakten Ihres Smartphones. Sie finden danach alle Ihre Telefonnummern und Adressen in der Kontakte-App.</string>
    <string name="intro_mail_title">Lesen Sie Ihre E-Mails – <b>jederzeit und überall.</b></string>
    <string name="intro_mail_text">Mit der Sync-Plus App werden Ihre E-Mails ständig synchronisiert. Diese können dann in der E-Mail-App Ihres Smartphones abgerufen werden.</string>
    <string name="title_activity_setup">Sync-Plus Einrichten</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_help">Informationen</string>
    <string name="title_activity_contacts">Alle Kontakte</string>
    <string name="title_activity_list_contacts">Alle Kontakte</string>
    <string name="title_activity_duplicated_contacts">Doppelte Kontakte</string>
    <string name="title_activity_contact_detail">Kontakte Detail</string>
    <string name="setup_description">Wählen Sie aus, welche Daten Sie mit Ihren installierten Apps synchronisieren möchten.</string>
    <string name="setup_calendar">Kalender</string>
    <string name="setup_email">E-Mail</string>
    <string name="setup_addressbook">Adressbuch</string>
    <string name="topbar_steps">Schritt %1$d/%2$d</string>
    <string name="topbar_title_setup">Synchronisation einrichten</string>
    <string name="topbar_title_copy_contacts">Kontakte kopieren</string>
    <string name="topbar_title_email">E-Mail einrichten</string>
    <string name="setup_email_description">Laden Sie die Telekom Mail App herunter und loggen Sie sich mit Ihrer E-Mail-Adresse und Ihrem Passwort ein.</string>
    <string name="setup_email_download_mailapp">Telekom Mail App herunterladen</string>
    <string name="setup_email_redirect_playstore">Sie werden zu Google Play Store weitergeleitet</string>
    <string name="setup_email_preinstalled">Vorinstallierte E-Mail App</string>
    <string name="setup_email_preinstalled_description">Alternativ können Sie in den Einstellungen Ihres Geräts ein Konto aus einem der dort aufgeführten E-Mail-Programme hinzufügen.</string>
    <string name="setup_calendar_description">Wählen Sie die Kalender aus, die Sie synchronisieren möchten.</string>
    <string name="setup_contact_description">Kopieren Sie zunächst die Kontakte von Ihrem Smartphone in Ihr Adressbuch in der Telekom Cloud.</string>
    <string name="setup_contacts_button_skip">Überspringen</string>
    <string name="setup_contacts_button_next">Kontakte kopieren</string>
    <string name="setup_contacts_disclaimer">Bitte haben Sie etwas Geduld, da der Import der Kontaktdaten mehrere Minuten dauern kann.</string>
    <string name="activity_contacts_all_contacts">Alle Kontakte</string>
    <string name="copy_contacts_in_progress">Ihre Kontakte werden kopiert …</string>
    <string name="button_title_cancel_copy">Kopieren abbrechen</string>
    <string name="dialog_sync_cancel">Sie haben die Synchronisation abgebrochen.</string>
    <string name="dialog_button_title_close">Schliessen</string>
    <string name="dialog_sync_error_title">Fehler beim Kopiervorgang</string>
    <string name="dialog_sync_error_text">Es gab leider ein technisches Problem während des Kopierens Ihrer Kontakte. Möchten Sie es nochmal versuchen?</string>
    <string name="dialog_sync_confirm_title">Kontakte nicht synchronisiert</string>
    <string name="dialog_sync_confirm_text">Wenn Sie diesen Vorgang überspringen, werden Ihre bisher auf diesem Gerät vorhandenen Kontakte nicht synchronisiert.</string>
    <string name="dialog_login_failed_title">Login fehlgeschlagen</string>
    <string name="dialog_login_failed_title_no_account">E-Mail-Adresse anlegen</string>
    <string name="dialog_login_failed_text_no_account">Um die Sync-Plus App nutzen zu können, benötigen Sie eine E-Mail Adresse @t-online.de/@magenta.de.</string>
    <string name="copy_success">Ihre Kontakte wurden kopiert</string>
    <string name="contacts_do_not_merge">Nicht zusammenführen</string>
    <string name="contacts_merge">Kontakte zusammenführen</string>
    <string name="duplicates_found_title_single">%1$d doppelten Kontakt gefunden</string>
    <string name="duplicates_found_title_multiple">%1$d doppelte Kontakte gefunden</string>
    <string name="contacts_duplicates_merge_description">Sollen doppelte Kontakte zusammengeführt und um die gefundenen Informationen ergänzt werden?</string>
    <string name="button_title_show_duplicates">Doppelte Kontakte anzeigen</string>
    <string name="duplicated_contacts_merge_description">Doppelte Kontakte werden wie folgt zusammengeführt:</string>
    <string name="contact_details_title">Kontakt-Details</string>
    <string name="company">Firma</string>
    <string name="position">Position</string>
    <string name="phone">Telefon</string>
    <string name="phone_private">Privat</string>
    <string name="phone_mobile">Mobil</string>
    <string name="phone_business">Beruflich</string>
    <string name="phone_private_mobile">Privat (Mobil)</string>
    <string name="phone_business_mobile">Beruflich (Mobil)</string>
    <string name="phone_private_fax">Privat (Fax)</string>
    <string name="phone_business_fax">Beruflich (Fax)</string>
    <string name="phone_private_voip">Privat (VoIP)</string>
    <string name="phone_business_voip">Beruflich (VoIP)</string>
    <string name="unknown">Unbekannt</string>
    <string name="email">E-Mail</string>
    <string name="dialog_contacts_not_merged">Kontakte nicht zusammengeführt</string>
    <string name="dialog_contacts_not_merged_description">Wenn Sie diesen Vorgang überspringen, werden Ihre doppelten Kontakte nicht zusammengeführt und werden einzeln in Ihrem Adressbuch erscheinen.</string>
    <string name="write_protected">(Schreibgeschützt)</string>
    <string name="dialog_permission_required_title">Berechtigungen notwendig</string>
    <string name="dialog_permission_required_text">Um Kontakte und Kalendereinträge in die Cloud zu übertragen, wird der Zugriff auf die Kontakte und den Kalender benötigt.</string>
    <string name="dialog_contacts_permission_required_title">Berechtigung für Kontaktimport notwendig</string>
    <string name="dialog_contacts_permission_required_text">Um Kontakte von Ihrem Gerät in Ihr Adressbuch in der Cloud zu übertragen, wird der Zugriff auf die Kontakte benötigt.</string>
    <string name="energy_saver_title">Wichtiger Hinweis zur Nutzung von Sync-Plus</string>
    <string name="energy_saver_text">Bitte schalten Sie die Akku-Optimierung für Sync-Plus in den Einstellungen Ihres Gerätes aus.\nDie Synchronisation mit Sync-Plus auf Android ist nur mit ausgeschalteter Akku-Optimierung gewährleistet.</string>
    <string name="energy_saver_radio_text">Nicht mehr anzeigen</string>
    <string name="energy_saver_button_text">OK</string>
    <string name="data_privacy_text">Diese App verwendet Tools, z. B. in Form von SDKs (Software Developer Kit).
        Diese können Informationen auf Ihrem Endgerät speichern und lesen.
        Mit einem Klick auf „Alle akzeptieren“ akzeptieren Sie die Verarbeitung,
        die Webseiten- und partnerübergreifende Erstellung von individuellen
        Nutzungsprofilen sowie die Weitergabe Ihrer Daten an Drittanbieter,
        die zum Teil Ihre Daten in Ländern außerhalb der europäischen Union verarbeiten (DSGVO Art. 49).
        Details finden Sie im Abschnitt 3des <a href="#dataprivacy">Datenschutzhinweises</a>.
        Die Daten werden für Analysen,
        Retargeting und zur Ausspielung von personalisierten Inhalten und Werbung auf Seiten der Telekom,
        sowie auf Drittanbieterseiten genutzt. Weitere Informationen,
        auch zur Datenverarbeitung durch Drittanbieter und der Möglichkeit des Widerrufs,
        finden Sie in den Einstellungen sowie in unseren Datenschutzhinweisen.\n
        Hier geht es <a href="#next">weiter</a> nur mit den notwendigen Tools.
    </string>
    <string name="disclaimer_button_accept">Alle akzeptieren</string>
    <string name="disclaimer_button_more">Einstellungen ändern</string>
    <string name="disclaimer_button_privacy">Datenschutzhinweis</string>
    <string name="data_privacy_button_secondary">Auswahl bestätigen</string>
    <string name="datasecurity_settings_title">Einwilligung in die Datenverarbeitung</string>
    <string name="required_only_text">Nur erforderliche</string>
    <string name="dialog_service_discovery_error_title">Fehler</string>
    <string name="dialog_service_discovery_error_message">Es ist ein Fehler aufgetreten. Bitte versuchen Sie es erneut.</string>
    <string name="dialog_service_discovery_error_action">Erneut versuchen</string>
</resources>