<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingStart="@dimen/dialogPadding"
    android:paddingTop="@dimen/dialogPadding"
    android:paddingEnd="@dimen/dialogPadding"
    android:paddingBottom="@dimen/dialogPadding">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telegrotesknext_regular"
        android:text="@string/dialog_service_discovery_error_title"
        android:textColor="@color/textColor"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="@font/telegrotesknext_regular"
        android:text="@string/dialog_service_discovery_error_message"
        android:textColor="@color/textColor"
        android:textSize="@dimen/fontSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <Button
        android:id="@+id/button_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/dialog_service_discovery_error_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_message" />

</androidx.constraintlayout.widget.ConstraintLayout>