<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/marginTopMedium"
    android:paddingBottom="@dimen/marginBottom">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/disclaimer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/disclaimer_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/telegrotesknext_bold"
            android:lineHeight="25dp"
            android:paddingStart="@dimen/dialogPadding"
            android:paddingEnd="@dimen/dialogPadding"
            android:text="@string/datasecurity_settings_title"
            android:textColor="@color/textGreyColor"
            android:textSize="@dimen/fontSizeMedium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />

        <ScrollView
            android:id="@+id/disclaimer_scrollview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/marginTopMedium"
            android:paddingStart="@dimen/dialogPadding"
            android:paddingEnd="@dimen/dialogPadding"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/disclaimer_buttons_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_title"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/disclaimer_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/telegrotesknext_regular"
                android:text="@string/data_privacy_text"
                android:textColor="@color/textGreyColor"
                android:textColorLink="@color/colorAccent"
                android:textSize="@dimen/fontSizeVerySmall" />

        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/disclaimer_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <Button
                android:id="@+id/required_button_accept"
                style="@style/RoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopMedium"
                android:minWidth="150dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/required_only_text"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/disclaimer_button_accept"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/disclaimer_button_accept"
                style="@style/RoundedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTopMedium"
                android:minWidth="150dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/disclaimer_button_accept"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/disclaimer_button_more"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/disclaimer_button_more"
                style="@style/OutlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="150dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/disclaimer_button_more"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@id/data_privacy_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/data_privacy_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_weight="0.5"
                android:fontFamily="@font/telegrotesknext_regular"
                android:letterSpacing="-0.02"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:shadowColor="@android:color/transparent"
                android:shadowDx="0"
                android:shadowDy="0"
                android:singleLine="true"
                android:text="@string/disclaimer_button_privacy"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fontSizeVerySmall"
                app:cornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_bias="1" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>