<?xml version="1.0" encoding="utf-8"?><!--
    This file is part of SyncPlus.

    Copyright (C) 2020  Deutsche Telekom AG

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dialogPadding"
    android:paddingTop="32dp"
    android:paddingEnd="@dimen/dialogPadding"
    android:paddingBottom="32dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/telegrotesknext_medium"
        android:lineHeight="25dp"
        android:text="@string/energy_saver_title"
        android:textColor="@color/textGreyColor"
        android:textSize="@dimen/fontSizeMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:fontFamily="@font/telegrotesknext_regular"
        android:lineHeight="21dp"
        android:text="@string/energy_saver_text"
        android:textColor="@color/textGreyColor"
        android:textSize="@dimen/fontSizeSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:id="@+id/radiobuttonlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/toggletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginStart"
            android:fontFamily="@font/telegrotesknext_regular"
            android:lineHeight="21dp"
            android:text="@string/energy_saver_radio_text"
            android:textColor="@color/textGreyColor"
            android:textSize="@dimen/fontSizeSmall"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:minWidth="120dp"
        android:text="@string/energy_saver_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiobuttonlayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
