<?xml version="1.0" encoding="utf-8"?><!--
    This file is part of SyncPlus.

    Copyright (C) 2020  Deutsche Telekom AG

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <https://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/marginStart"
    android:paddingTop="@dimen/marginTop"
    android:paddingEnd="@dimen/marginEnd">

    <TextView
        style="@style/RegularTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginMedium"
        android:lineSpacingExtra="2.5dp"
        android:text="@string/setup_contact_description"
        android:textSize="21sp" />

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackgroundBorderless"
        android:ellipsize="end"
        android:fontFamily="@font/telegrotesknext_regular"
        android:singleLine="true"
        android:text="Alle Kontakte"
        android:textColor="@color/textColor"
        android:textSize="@dimen/fontSizeMedium"
        app:ms_background_color="@android:color/white"
        app:ms_padding_left="0dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/marginBottomHigh">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/skipButton"
                style="@style/TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/setup_contacts_button_skip" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/copyButton"
                style="@style/RoundedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/setup_contacts_button_next" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:fontFamily="@font/telegrotesknext_regular"
            android:lineSpacingExtra="1.5dp"
            android:text="@string/setup_contacts_disclaimer"
            android:textAlignment="center"
            android:textColor="@color/textGreyLightColor"
            android:textSize="@dimen/fontSizeVerySmall" />
    </LinearLayout>
</LinearLayout>
